<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_search_books"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/fragment_favorite_books"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/fragment_settings"
        android:title="@string/settings"
    android:icon="@drawable/ic_settings_24" />

</menu>