<resources>
    <string name="app_name">BookSearchApp</string>

    <string name="search">Search Books</string>
    <string name="favorite">Favorite Books</string>
    <string name="settings">Settings</string>
    <string name="book_info">Book Info</string>
    <string name="fab">fab</string>
    <string name="accuracy">Accuracy</string>
    <string name="latest">Latest</string>
    <string name="sort_by">Sort by</string>
    <string name="error_message">Error message</string>
    <string name="retry">Retry</string>
    <string name="no_result">No result</string>
    <string name="cache_policy">Cache policy</string>
    <string name="delete_periodically">Delete periodically</string>
    <string name="status">Status</string>
    <string name="no_works">No works</string>
    <string name="search_">Search..</string>
    <string name="error_occurred">Error occurred</string>

</resources>